# goldfinch

./: .gitignore  README.md  container_bringup.sh
.devcontainer/: Dockerfile  devcontainer.json  install_systemc.bash
containers/systemc-python3-bullseye/: Dockerfile  build_container.bash  packages.bash
containers/systemc:python3-bullseye/: Dockerfile  install_systemc.bash
python/: pyproject.toml
python/src/goldfinch/: __init__.py  exceptions.py  sharpener.py
python/tests/: test_sharpener.py
systemc/: CMakeLists.txt  README.md
systemc/hello/: Makefile  hello.cpp
systemc/hello/tutorial/: CMakeLists.txt
systemc/sharpener/: sharpener.cpp  sink.cpp  source.cpp  test_sharpener.cpp
