[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
[project]
name = "goldfinch"
version = "0.0.1"
authors = [
  { name="Sean Mattingly", email="Smattacus@gmail.com" },
]
description = "Image Sharpening in Python and SystemC"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "scipy"
]
[project.urls]
"Homepage" = "https://github.com/Smattacus/goldfinch"
[project.optional-dependencies]
dev = [
    "pytest"
]
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = [
    "python/tests",
]